--- a/puphpet/config.yaml
+++ b/puphpet/config.yaml
@@ -238,6 +238,7 @@ php:
     modules:
         php:
             - cli
+            - curl
             - intl
             - xml
             - mbstring
